--- a/IoTDeviceEmulator/IoTDeviceEmulator/IoTDeviceEmulator.csproj
+++ b/IoTDeviceEmulator/IoTDeviceEmulator/IoTDeviceEmulator.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20253.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Flekosoft.Emulation.Iot.Common\Flekosoft.Emulation.Iot.Common.csproj" />
